--- a/index.html
+++ b/index.html
@@ -121,21 +121,36 @@
             </div>
         </div>
         <div class="col-sm-6 col-md-3 shop-item mt-4">
-            <img src="Assets/item3.jpeg" alt="product-3">
-            <div class="description text-center">
+            <img src="Assets/item3.jpeg" alt="product-3" class="adjust-1">
+            <div class=" description text-center">
               <figcaption>Disney X Hair Drama Co.</figcaption>
               <figcaption>SHOP NOW</figcaption>
             </div>
         </div>
         <div class="col-sm-6 col-md-3 shop-item mt-4">
-            <img src="Assets/item4.jpeg" alt="product-4">
-            <div class="description">
+            <img src="Assets/item4.jpeg" alt="product-4" class="adjust-2">
+            <div class="description text-center">
               <figcaption>Disney X Toothless Kids</figcaption>
               <figcaption>SHOP NOW</figcaption>
             </div>
         </div>
     </section>
     <!-- SHOP ENDS -->
+
+    <!-- MAIN STRATS -->
+     <main class="container">
+        <section class="row mt-4">
+          <div class="col-12 advertisment">
+             <span class="heading" >Featured Ads</span>
+             <div class="ad">
+                <span id="ad-content" ><img src="Assets/thumbnail.jpeg" alt="Spider-Man" class="spider-man"></span>
+                <img id="play-button" src="Assets/icons8-play-button-circled-50.png" alt="Play Button" class="play-button">
+             </div>
+          </div>
+        </section>
+        <section class="row"></section>
+     </main>
+    <!-- MAIN ENDS -->
     <div style="margin-top: 500px;"></div>
     <!-- <div class="row bg-success mt-5">jsdhfviuawfhcviuahsdfcojhaSWfc</div> -->
     <script
