--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -50,8 +56,15 @@
             aria-label="Toggle navigation"
           >
             <div id="togg-button" class="togg-button">
-              <span id="togg-btn-1" ><img src="Assets/menu.png" alt="menu" class="toogler-button-menu" /></span>
-              <span id="togg-btn-2" class="toggle-display"><i class="fa-solid fa-xmark toogler-button-menu"></i></span>
+              <span id="togg-btn-1"
+                ><img
+                  src="Assets/menu.png"
+                  alt="menu"
+                  class="toogler-button-menu"
+              /></span>
+              <span id="togg-btn-2" class="toggle-display"
+                ><i class="fa-solid fa-xmark toogler-button-menu"></i
+              ></span>
             </div>
           </button>
 
@@ -61,10 +74,10 @@
           >
             <ul class="navbar-nav w-100">
               <li class="nav-item py-2">
-                <a
+                <a target="_blank"
                   class="nav-link active d-flex justify-content-between align-items-center w-100 px-3"
                   aria-current="page"
-                  href="#"
+                  href="https://www.disney.in/parks"
                 >
                   PARKS
                   <i class="bi bi-chevron-right d-block d-md-none"></i>
@@ -72,10 +85,10 @@
               </li>
 
               <li class="nav-item border-top py-2 px-3 border-black">
-                <a class="nav-link active" href="#">CRUISE</a>
+                <a target="_blank" class="nav-link active" href="https://www.disney.in/cruise">CRUISE</a>
               </li>
               <li class="nav-item border-top py-2 px-3 border-black">
-                <a class="nav-link active" href="#">WHAT'S NEW</a>
+                <a target="_blank" class="nav-link active" href="https://www.disney.in/whats-new">WHAT'S NEW</a>
               </li>
             </ul>
           </div>
@@ -83,75 +96,321 @@
       </nav>
     </header>
     <!-- HEADER ENDS  -->
-     
-    <!-- HERO STARTS -->
-        <section id="hero" class=" hero">
-                <div id="hero-adjust" class="hero-adjust" style="display: none;"></div>
-            <section id="hero-content" class="hero-content">
-                <img src="Assets/hero-avdenture.png" alt="Disney Adventure">
-                <p class="hero-text" >Set Sail on a magical holiday at sea with our 3 and 4-night voyages</p>
-                <button>BOOK NOW</button>
-            </section>
-        </section>
 
-        <!-- MOBILE MEDIA -->
-         <section id="mobile-media" class="row mobile-media">
-            <img src="Assets/hero-avdenture.png" alt="Disney Adventure">
-            <p class="hero-text">Set Sail on a magical holiday at sea with our 3 and 4-night voyages</p>
-            <button class="book-now" >BOOK NOW</button>
-        </section>
-        <!-- MOBILE MEDIA -->
+    <!-- HERO STARTS -->
+    <a target="_blank" href="https://disneycruise.disney.go.com/en-in/ships/adventure/">
+    <section id="hero" class="hero" >
+      <div id="hero-adjust" class="hero-adjust" style="display: none">
+      <section id="hero-content" class="hero-content">
+        <img src="Assets/hero-avdenture.png" alt="Disney Adventure" />
+        <p class="hero-text">
+          Set Sail on a magical holiday at sea with our 3 and 4-night voyages
+        </p>
+       <button>BOOK NOW</button>
+      </section>
+    </section>
+  </a>
+
+    <!-- MOBILE MEDIA -->
+    <a target="_blank" href="https://disneycruise.disney.go.com/en-in/ships/adventure/">
+    <section id="mobile-media" class="row mobile-media">
+      <img src="Assets/hero-avdenture.png" alt="Disney Adventure" />
+      <p class="hero-text">
+        Set Sail on a magical holiday at sea with our 3 and 4-night voyages
+      </p>
+      <button class="book-now">BOOK NOW</button>
+    </section>
+    </a>
+    <!-- MOBILE MEDIA -->
 
     <!-- HERO ENDS -->
-     
+
     <!-- SHOP STARTS -->
     <section class="row shop">
-        <div class="col-sm-6 col-md-3 shop-item mt-4">
-            <img src="Assets/item1.jpeg" alt="product-1">
-            <div class="description">
-              <figcaption>Disney X Ginger</figcaption>
-              <figcaption>SHOP NOW</figcaption>
-            </div>
+
+      <div class="col-sm-6 col-md-3 shop-item mt-5">
+          <a target="_blank" class="text-decoration-none" href="https://www.lifestylestores.com/in/en/search?q=badge.invisible%3AAM36">
+        <img id="product-1" src="" alt="product-1" />
+        <div class="description">
+          <figcaption>Disney X Ginger</figcaption>
+          <figcaption>SHOP NOW</figcaption>
         </div>
-        <div class="col-sm-6 col-md-3 shop-item mt-4">
-            <img src="Assets/item2.jpeg" alt="product-2">
-            <div class="description">
-              <figcaption>Disney X Mila Baby</figcaption>
-              <figcaption>SHOP NOW</figcaption>
-            </div>
+      </a>
+      </div>
+
+    <div class="col-sm-6 col-md-3 shop-item mt-5">
+          <a target="_blank" class="text-decoration-none" href="https://www.ajio.com/c/mila-baby-4313-14121">
+        <img id="product-2" src="" alt="product-2" />
+        <div class="description">
+          <figcaption>Disney X Mila Baby</figcaption>
+          <figcaption>SHOP NOW</figcaption>
         </div>
-        <div class="col-sm-6 col-md-3 shop-item mt-4">
-            <img src="Assets/item3.jpeg" alt="product-3" class="adjust-1">
-            <div class=" description text-center">
-              <figcaption>Disney X Hair Drama Co.</figcaption>
-              <figcaption>SHOP NOW</figcaption>
-            </div>
+      </a>
+      </div>
+
+    <div class="col-sm-6 col-md-3 shop-item mt-5">
+          <a target="_blank" class="text-decoration-none" href="https://hairdramacompany.com/collections/hdc-x-disney">
+        <img id="product-3" src="" alt="product-3" class="adjust-1" />
+        <div class="description text-center">
+          <figcaption>Disney X Hair Drama Co.</figcaption>
+          <figcaption>SHOP NOW</figcaption>
         </div>
-        <div class="col-sm-6 col-md-3 shop-item mt-4">
-            <img src="Assets/item4.jpeg" alt="product-4" class="adjust-2">
-            <div class="description text-center">
-              <figcaption>Disney X Toothless Kids</figcaption>
-              <figcaption>SHOP NOW</figcaption>
-            </div>
+      </a>
+      </div>
+
+      <div class="col-sm-6 col-md-3 shop-item mt-5">
+        <a target="_blank" class="text-decoration-none" href="https://toothless.in/">
+          <img id="product-4" src="" alt="product-4" class="adjust-2" />
+        <div class="description text-center">
+          <figcaption>Disney X Toothless Kids</figcaption>
+          <figcaption>SHOP NOW</figcaption>
         </div>
+      </div>
     </section>
+    </a>
     <!-- SHOP ENDS -->
 
     <!-- MAIN STRATS -->
-     <main class="container">
-        <section class="row mt-4">
-          <div class="col-12 advertisment">
-             <span class="heading" >Featured Ads</span>
-             <div class="ad">
-                <span id="ad-content" ><img src="Assets/thumbnail.jpeg" alt="Spider-Man" class="spider-man"></span>
-                <img id="play-button" src="Assets/icons8-play-button-circled-50.png" alt="Play Button" class="play-button">
-             </div>
+    <main class="container-fluid main-content ps-4 pe-4">
+      <!-- MARVEL STARTS -->
+      <section class="row mt-5">
+        <div class="col-12 advertisment">
+          <div class="heading pt-4 pb-4">Featured Ads</div>
+          <div class="ad">
+            <span id="ad-content"
+              ><img
+                src="Assets/thumbnail.jpeg"
+                alt="Spider-Man"
+                class="spider-man"
+            /></span>
+            <img
+              id="play-button"
+              src="Assets/icons8-play-button-circled-50.png"
+              alt="Play Button"
+              class="play-button"
+            />
           </div>
+          <div class="line ps-5 pt-4">
+            <a class="text-black text-decoration-none" href="https://www.amazon.in/PS4-Marvels-Spider-Man-Miles-Morales/dp/B08LFBM5JV/ref=sr_1_1?crid=NYYHI4H0E04U&dchild=1&keywords=ps4+spiderman+miles+morales&qid=1604908889&sprefix=PS4+sp,aps,410&sr=8-1">
+              <span class="Down-line text-black"> Marvel's Spider-Man</span>
+            <p>
+              When new foes threaten the city, a new web-slinger arises as
+              Spider-Man. <br />
+              Marvel’s Spider-Man: Miles Morales has arrived on PlayStation 4
+              and PlayStation 5. Get the game now:
+              <a href="http://amzn.to/35buWpS">http://amzn.to/35buWpS</a> <br />
+              #BeGreater #BeYourself #MilesMorales"
+            </p>
+            </a>
+          </div>
+        </div>
+      </section>
+      <!-- MARVEL ENDS -->
+
+      <!-- HOLIDAY STARTS -->
+      <section class="row">
+        <span class="heading pt-3 pb-4">Explore Disney Holidays</span>
+        <section class="col-md-4">
+          <a target="_blank"
+            class="text-decoration-none text-black"
+            href="https://www.disneylandparis.com/en-usd"
+          >
+            <div class="holiday-item">
+              <img id="holiday-1"
+                class="holiday-one"
+                src=""
+                alt="Holiday"
+              />
+              <div class="holiday-description">
+                <figcaption>Legends of the Force</figcaption>
+                <figcaption>
+                  DISCOVER NOW AT DISNEYLAND<i
+                    class="fa-regular fa-registered register"
+                  ></i>
+                  PARIS
+                </figcaption>
+              </div>
+            </div>
+          </a>
         </section>
-        <section class="row"></section>
-     </main>
+        <section class="col-md-4">
+          <a target="_blank"
+            class="text-decoration-none text-black"
+            href="https://www.disneyholidays.co.uk/walt-disney-world/tickets/055/?CMP=ILC-WDW_FY18Q3_EMEA_14-for-7-Tickets_Tra_TWDCEMEA_parks_grido_14-day-ticket_Image&utm_medium=referral&utm_source=TWDCEMEA&utm_campaign=WDW_EMEA_14%20for%207%20Tickets&utm_content=Tra_parks_grido_14%20day%20ticket&utm_term=Image"
+          >
+            <div class="holiday-item">
+              <img id="holiday-2"
+                class="holiday-one"
+                src=""
+                alt="Holiday"
+              />
+              <div class="holiday-description">
+                <figcaption>14 Day Ticket at a 7 Day Price</figcaption>
+                <figcaption>BOOK WITH WALT DISNEY WORLD</figcaption>
+              </div>
+            </div>
+          </a>
+        </section>
+
+        <section class="col-md-4">
+          <a target="_blank"
+            class="text-decoration-none text-black"
+            href="https://disneycruise.disney.go.com/en-in/featured/2019-summer-itineraries/?CMP=ILC-DCL_FY19Q1_EMEA_Generic_Tra_TWDCEMEA_home_grido_Itineraries_Image"
+          >
+            <div class="holiday-item">
+              <img id="holiday-3"
+                class="holiday-one"
+                src=""
+                alt="Holiday"
+              />
+              <div class="holiday-description">
+                <figcaption>Find Your Perfect Holiday</figcaption>
+                <figcaption>BOOK WITH DISNEY CRUISE LINE</figcaption>
+              </div>
+            </div>
+          </a>
+        </section>
+      </section>
+      <!-- HOLIDAY ENDS -->
+    </main>
     <!-- MAIN ENDS -->
-    <div style="margin-top: 500px;"></div>
+
+    <!-- FOOTER STARTS -->
+    <footer class="row">
+      <section class="footer-1 ps-5 pe-5 pt-5">
+        <img src="Assets/Disney.png" alt="Disney Logo" />
+        <div class="in-links">
+          <a class="text-black text-decoration-none" href="">PARKS</a>
+          <a class="text-black text-decoration-none" href="">CRUISE</a>
+          <a class="text-black text-decoration-none" href="">WHAT'S NEW</a>
+        </div>
+        <div class="social">
+          <a
+            class="text-black"
+            target="_blank"
+            href="https://x.com/DisneyIndia?s=20"
+            ><i class="fa-brands fa-x-twitter"></i
+          ></a>
+          <a
+            class="text-black"
+            target="_blank"
+            href="https://www.facebook.com/disneyindia/"
+            ><i class="fa-brands fa-facebook-f"></i
+          ></a>
+          <a
+            class="text-black"
+            target="_blank"
+            href="https://www.instagram.com/disneyindia/?hl=en"
+            ><i class="fa-brands fa-square-instagram"></i
+          ></a>
+          <a
+            class="text-black"
+            target="_blank"
+            href="https://www.youtube.com/user/disneyindia"
+            ><i class="fa-brands fa-youtube"></i
+          ></a>
+        </div>
+      </section>
+
+      <section class="footer-2 mt-5">
+        <img src="Assets/Disney.png" alt="Disney Logo" />
+        <div class="footer-links mt-3">
+          <ul>
+            <li>
+              <a
+                class="text-black text-decoration-none footer-item"
+                href="https://thewaltdisneycompany.com/"
+                >About</a
+              >
+            </li>
+            <li>
+              <a
+                class="text-black text-decoration-none footer-item"
+                href="https://jobs.disneycareers.com/"
+                >Careers</a
+              >
+            </li>
+            <li>
+              <a
+                class="text-black text-decoration-none footer-item"
+                href="https://www.disney.co.uk/about-us"
+                >Internet Saftey</a
+              >
+            </li>
+            <li>
+              <a
+                class="text-black text-decoration-none footer-item"
+                href="https://disneytermsofuse.com/"
+                >Terms of Use</a
+              >
+            </li>
+            <li>
+              <a
+                class="text-black text-decoration-none footer-item"
+                href="https://privacy.thewaltdisneycompany.com/en/current-privacy-policy/"
+                >Privacy Policy</a
+              >
+            </li>
+            <li>
+              <a
+                class="text-black text-decoration-none footer-item"
+                href="https://disneytermsofuse.com/english/dmca-notices/"
+                >DMCA Notices</a
+              >
+            </li>
+            <li>
+              <a
+                class="text-black text-decoration-none footer-item"
+                href="https://www.disney.in/supplemental-gtou"
+                >Supplimental Terms of Use</a
+              >
+            </li>
+            <li>
+              <a
+                class="text-black text-decoration-none footer-item"
+                href="https://privacy.thewaltdisneycompany.com/en/current-privacy-policy/addendum-to-the-global-privacy-policy/"
+                >Addendum to Privacy Policy - for India</a
+              >
+            </li>
+            <li>
+              <a
+                class="text-black text-decoration-none footer-item"
+                href="https://www.disney.in/contest-terms-and-conditions"
+                >Contest Terms and Conditions</a
+              >
+            </li>
+            <li>
+              <a
+                class="text-black text-decoration-none footer-item"
+                href="https://www.jiostar.com/"
+                >Channel Distribution</a
+              >
+            </li>
+            <li>
+              <a
+                class="text-black text-decoration-none footer-item"
+                href="https://privacy.thewaltdisneycompany.com/en/privacy-controls/online-tracking-and-advertising/"
+                >Interest Based Ads</a
+              >
+            </li>
+            <li>
+              <a
+                class="text-black text-decoration-none footer-item"
+                href="https://www.disney.in/support"
+                >Support</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="copyright">
+          <p>
+            © Disney © Disney•Pixar © & ™ Lucasfilm LTD © Marvel. All Rights
+            Reserved
+          </p>
+        </div>
+      </section>
+    </footer>
+    <!-- FOOTER ENDS -->
     <!-- <div class="row bg-success mt-5">jsdhfviuawfhcviuahsdfcojhaSWfc</div> -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
