--- a/index.html
+++ b/index.html
@@ -98,21 +98,21 @@
     <!-- HEADER ENDS  -->
 
     <!-- HERO STARTS -->
-    <a target="_blank" href="https://disneycruise.disney.go.com/en-in/ships/adventure/">
+    <a class="text-decoration-none" target="_blank" href="https://disneycruise.disney.go.com/en-in/ships/adventure/">
     <section id="hero" class="hero" >
-      <div id="hero-adjust" class="hero-adjust" style="display: none">
+      <div id="hero-adjust" class="hero-adjust" ></div>
       <section id="hero-content" class="hero-content">
         <img src="Assets/hero-avdenture.png" alt="Disney Adventure" />
         <p class="hero-text">
           Set Sail on a magical holiday at sea with our 3 and 4-night voyages
         </p>
        <button>BOOK NOW</button>
-      </section>
+      </section>  
     </section>
   </a>
 
     <!-- MOBILE MEDIA -->
-    <a target="_blank" href="https://disneycruise.disney.go.com/en-in/ships/adventure/">
+    <a class="text-decoration-none" target="_blank" href="https://disneycruise.disney.go.com/en-in/ships/adventure/">
     <section id="mobile-media" class="row mobile-media">
       <img src="Assets/hero-avdenture.png" alt="Disney Adventure" />
       <p class="hero-text">
