--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <section id="hero-content" class="hero-content">
         <img src="Assets/hero-avdenture.png" alt="Disney Adventure" />
         <p class="hero-text">
-          Set Sail on a magical holiday at sea with our 3 and 4-night voyages
+          Set Sail on a magical holiday at sea with our 3 day and 4-night voyages
         </p>
        <button>BOOK NOW</button>
       </section>  
@@ -116,7 +116,7 @@
     <section id="mobile-media" class="row mobile-media">
       <img src="Assets/hero-avdenture.png" alt="Disney Adventure" />
       <p class="hero-text">
-        Set Sail on a magical holiday at sea with our 3 and 4-night voyages
+        Set Sail on a magical holiday at sea with our 3 day and 4-night voyages
       </p>
       <button class="book-now">BOOK NOW</button>
     </section>
